fix screen on mobile

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -87,11 +87,13 @@
     text-align: center;
     opacity: 0;
     height: 0;
+    width: 0%;
     transition: opacity 0.3s ease, height 0.3s ease;
 }
 
 .active.work__container {
     opacity: 1;
+    width: 100%;
     height: 100%;
 }
 
